feat: add new Cars entity
