# app/Http/Resources/CarResource.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Resources;
 
+use App\Http\Resources\Brand\BrandResource;
+use App\Http\Resources\CarModels\CarModelsResource;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
@@ -15,12 +17,17 @@ class CarResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'id' => $this->id,
-            'brand' => $this->brand,
-            'model' => $this->model,
-            'year' => $this->year,
-            'color' => $this->color,
+            'brand' => new BrandResource($this->brand),
+            'car_models' => new CarModelsResource($this->carModels),
             'price' => $this->price,
+            'availability' => $this->availability,
+            'year' => $this->year,
+            'fuel_type' => $this->fuel_type,
+            'transmission' => $this->transmission,
+            'seats' => $this->seats,
+            'color' => $this->color,
+            'image' => $this->image,
+            'description' => $this->description,
         ];
     }
 }
