# app/Models/Car.php
@@ -4,9 +4,21 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 class Car extends Model
 {
     use HasFactory;
-     protected $guarded = [];
+
+    protected $guarded = [];
+
+    public function brand(): BelongsTo
+    {
+        return $this->belongsTo(Brand::class, 'brand_id');
+    }
+
+    public function carModels(): BelongsTo
+    {
+        return $this->belongsTo(CarModels::class, 'car_models_id');
+    }
 }
